# cuda_proj

./: CMakeLists.txt
src/: kernel.cuh  main.cu
